Change input prompt text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 
 <body>
-  <input type='text' class='field' id='num-input' value='' placeholder='Input number.'>
+  <input type='text' class='field' id='num-input' value='' placeholder='Input a number here.'>
   <div class='field' id='num-output'></div>
 </body>
